// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`messageActions doNarrow if newNarrow stream is not valid, do nothing 1`] = `Array []`;

exports[`messageActions doNarrow if newNarrow user is deactivated, do nothing 1`] = `Array []`;

exports[`messageActions doNarrow when messages in new narrow, only action to switch narrow is dispatched 1`] = `
Array [
  Object {
    "narrow": Array [
      Object {
        "operand": "some stream",
        "operator": "stream",
      },
    ],
    "type": "SWITCH_NARROW",
  },
]
`;

exports[`messageActions doNarrow when no messages in new narrow and caughtUp is false, actions to fetch messages and switch narrow are dispatched 1`] = `
Array [
  Object {
    "narrow": Array [
      Object {
        "operand": "some stream",
        "operator": "stream",
      },
    ],
    "type": "SWITCH_NARROW",
  },
  Object {
    "narrow": Array [
      Object {
        "operand": "some stream",
        "operator": "stream",
      },
    ],
    "numAfter": 0,
    "numBefore": 20,
    "type": "MESSAGE_FETCH_START",
  },
]
`;

exports[`messageActions doNarrow when no messages in new narrow and caughtUp is true, only action to switch narrow is dispatched 1`] = `
Array [
  Object {
    "narrow": Array [
      Object {
        "operand": "some stream",
        "operator": "stream",
      },
    ],
    "type": "SWITCH_NARROW",
  },
  Object {
    "narrow": Array [
      Object {
        "operand": "some stream",
        "operator": "stream",
      },
    ],
    "numAfter": 0,
    "numBefore": 20,
    "type": "MESSAGE_FETCH_START",
  },
]
`;
